Replace Arrays.asList with List.of for updates